# youtube-mcp

./: README.md  oauth_server.py  pyproject.toml  youtube-upload-mcp.py
